create style for pagination links blog

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -77,6 +77,7 @@
 //// Blog
 @import "components/blog/header-blog.styl"
 @import "components/blog/_blog-card.styl"
+@import "components/blog/_pagination.styl"
 @import "components/blog/blog-home.styl"
 
 
