add blockquote icon to iconfont

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -54,7 +54,8 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "medal"  "\e92f",
                       "play"  "\e930",
                       "github-btn"  "\e931",
-                      "pdf-btn"   "\e932"
+                      "pdf-btn"   "\e932",
+                      "blockquote"  "\e936"
 
 
 
