--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -77,8 +77,11 @@
 //// Blog
 @import "components/blog/header-blog.styl"
 @import "components/blog/_blog-card.styl"
+@import "components/blog/_blog-aside.styl"
 @import "components/blog/_pagination.styl"
 @import "components/blog/blog-home.styl"
+@import "components/blog/blog-post.styl"
+@import "components/blog/_blogArticle.styl"
 
 
 // Trumps
