add cursor to link text

--- a/ecoleinfographie/resources/assets/stylus/base/_links.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_links.styl
@@ -69,6 +69,7 @@
   letter-spacing inherit
   color $cBlueCiel
   font-weight: 600
+  cursor pointer
   &:hover:after
   &:focus:after
     width 100%
