add new icons to iconfont

--- a/ecoleinfographie/resources/assets/stylus/settings/icons.styl
+++ b/ecoleinfographie/resources/assets/stylus/settings/icons.styl
@@ -55,7 +55,13 @@ $ws_icon-list =       "arrow-left"   "\e900",
                       "play"  "\e930",
                       "github-btn"  "\e931",
                       "pdf-btn"   "\e932",
-                      "blockquote"  "\e936"
+                      "blockquote"  "\e936",
+                      "behance-only" "\e937",
+                      "dribble-only" "\e93b",
+                      "linkedin-only" "\e93c",
+                      "pinterest-only" "\e93d",
+                      "vimeo-only" "\e93e",
+                      "youtube-only" "\e93f",
 
 
 
