add on focus item

--- a/ecoleinfographie/resources/assets/stylus/components/blog/_blog-card.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_blog-card.styl
@@ -165,6 +165,7 @@
 
 // Hover carte disparait au survol des autres liens
 .blog-card__go-article:hover
+.blog-card__go-article:focus
   & ~ .blog-card__header:before
     opacity 1
     transition .3s ease opacity
