create style for footer article

--- a/ecoleinfographie/resources/assets/stylus/components/blog/_blog-aside.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_blog-aside.styl
@@ -10,7 +10,8 @@
     @extend .hidden
   & section
     margin-bottom s(50)
-    box-shadow 0 0 2px 0 rgba(169,169,169,0.50);
+    box-shadow 0 0 2px 0 rgba(169,169,169,0.50)
+
 
 
 
