--- a/ecoleinfographie/resources/assets/stylus/components/blog/_blogArticle.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_blogArticle.styl
@@ -10,9 +10,9 @@ $paddLArticle = 52
     font-size inherit
   a.blogArticle__link
     @extend .linkInText
-  ul
+  .blogArticle__list
     padding-left s($paddLArticle)
-    li
+    .blogArticle__item
       font-size s($sz7)
       line-height 1.6em
       margin-bottom s(10, $sz7)
@@ -191,5 +191,4 @@ $paddLArticle = 52
     font-weight 600
     color $cBlack
     line-height: 1.62em
-
 
