create style for footerArticle

--- a/ecoleinfographie/resources/assets/stylus/components/blog/_footerArticle.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_footerArticle.styl
@@ -1,210 +1,15 @@
 /************************************\
 		FOOTER ARTICLE
 \************************************/
-/*.footerArticle
-  background $cWhite
-  min-width s(820)
-  height 140px
-  box-shadow 0 0 2px 0 rgba(169,169,169,0.5)
-  &:after
-    @extend .clearfix
-  &__author
-    float left
-    width 47%
-    padding s(25) s(40)
-    border-right 1px solid $cGrey-lineMenu2
-    &:after
-      @extend .clearfix
-    &__img
-      float: left
-      display block
-      border-radius 50%
-    &__name
-      display: block
-      font-size s($sz7)
-      letter-spacing 0.5px
-      margin-bottom s(5, $sz7)
-      & a
-        font-size inherit
-        @extend .linkInText
-        line-height: 1.6em
-    &__role
-      display: block
-      font-size s($sz7)
-      font-weight 300
-      margin-bottom s(22, $sz7)
-
-.footer__author__container-infos
-  margin-left s(80)
-
-.footerArticle__follow
-  &__list
-    display: inline-block
-    margin-left s(80)
-  &__label
-    font-size s($sz7)
-    font-weight 300
-  &__link
-    display: inline-block
-  &__link span
-    @extend .hidden
-  &__item
-    display: inline-block
-    margin-right s(10)
-    &:last-child
-      margin-right: 0
-  &__item:before
-    display: none
-.footerArticle__follow__item:before
-  display: none
-
-.footerArticle__follow__link:before
-  setIconBase()
-  font-size s($sz8)
-
-.footerArticle__follow__link:hover:before
-.footerArticle__follow__link:focus:before
-  transition .2s ease color
-
-.footerArticle__follow__link--facebook:before
-  setIconInclude('facebook')
-.footerArticle__follow__link--facebook:hover:before
-  color $cFacebook
-
-.footerArticle__follow__link--twitter:before
-  setIconInclude('twitter')
-.footerArticle__follow__link--twitter:hover:before
-  color $cTwitter
-
-.footerArticle__follow__link--behance:before
-  setIconInclude('behance-only')
-.footerArticle__follow__link--behance:hover:before
-  color $cBehance
-
-.footerArticle__follow__link--dribble:before
-  setIconInclude('dribble-only')
-.footerArticle__follow__link--dribble:hover:before
-  color $cDribble
-
-.footerArticle__follow__link--linkedin:before
-  setIconInclude('linkedin-only')
-.footerArticle__follow__link--linkedin:hover:before
-  color $cLinkedin
-
-.footerArticle__follow__link--pinterest:before
-  setIconInclude('pinterest-only')
-.footerArticle__follow__link--pinterest:hover:before
-  color $cPinterest
-
-.footerArticle__follow__link--vimeo:before
-  setIconInclude('vimeo-only')
-.footerArticle__follow__link--vimeo:hover:before
-  color $cVimeo
-
-.footerArticle__follow__link--youtube:before
-  setIconInclude('youtube-only')
-.footerArticle__follow__link--youtube:hover:before
-  color $cYoutube
-
-
-// Footer article sharer
-.footerArticle__sharer
-  float: left
-  padding s(25) s(40)
-  border-right 1px solid $cGrey-lineMenu2
-  &__label-top
-    display: block
-    font-size s($sz7)
-    margin-bottom s(10, $sz7)
-  &__label-bottom
-    display: inline-block
-    font-size s($sz7)
-    margin-bottom s(15, $sz7)
-    font-weight: 900
-    text-transform: uppercase
-    color $cBlueTitles
-    letter-spacing 1.33px
-  & .social-list-circle__item
-    display: inline-block
-    margin-right 10px
-    &:last-child
-      margin-right: 0
-  & .social-list-circle__link:before
-    font-size 29px
-
-// Footer article like
-.footerArticle__like
-  float: left
-  & .fav
-    position: relative;
-    outline none
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    & svg
-      transform-origin: center center;
-      transition: all .15s ease-out;
-      width: 70px;
-      height: 84px;
-  & .fav#heartPath
-    fill: inherit;
-    stroke: inherit;
-    stroke-width: inherit;
-    transform: inherit;
-  & .fav.favPress svg
-    transform: scale(0.8);
-  & .floatHeart
-    position: absolute;
-    top: 0;
-    left: 0;
-  & .stableHeart
-    stroke: #bdc3c7;
-    fill: none;
-  & .favd .stableHeart
-    stroke: #E01D4F;
-    fill: #E01D4F;
-    opacity: 1;
-  & .fav:not(.favd):hover .stableHeart
-    stroke: #E01D4F;
-    opacity: 0.75;
-  & .fav.favPress .stableHeart
-    opacity: 1;
-  & .floatHeart
-    fill: none;
-    opacity: 0;
-  & .fav:hover .floatHeart
-    stroke: #E01D4F;
-    fill: #E01D4F;
-  & .fav.favd .floatHeart
-    animation-duration: 800ms;
-    animation-name: poof;
-
-@keyframes poof
-  from
-    top 0
-    opacity 0.6
-  to
-    top -150px
-    opacity: 0
-
-.footerArticle__like
-  position: relative
-  width 20.56%
-  height s(140)
-  &-wrapper
-    position: relative
-    padding s(17) s(50)
-  &__counter
-    position: relative
-    top -5px
-    display: block
-    text-align: center*/
-
 .footerArticle
+  position: relative
   background $cWhite
   min-width s(735)
   height s(180)
   box-shadow 0 0 2px 0 rgba(169,169,169,0.5)
   display: flex
   align-items center
+  z-index 2
 
   &:after
     @extend .clearfix
