create syles for position footerArticle & html com

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -81,6 +81,7 @@
 @import "components/blog/_pagination.styl"
 @import "components/blog/_blogArticle.styl"
 @import "components/blog/_footerArticle.styl"
+@import "components/blog/_comments.styl"
 @import "components/blog/blog-home.styl"
 @import "components/blog/blog-post.styl"
 
