--- a/ecoleinfographie/resources/assets/stylus/components/blog/_blogArticle.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_blogArticle.styl
@@ -116,6 +116,8 @@ $paddLArticle = 52
 \************************************/
 .blogArticle__section
   margin s(40) 0
+  &:last-child
+    margin-bottom s(120)
 
 /************************************\
     ARTICLE SUBTITLE
