create page graduated

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -84,6 +84,8 @@
 @import "components/blog/_comments.styl"
 @import "components/blog/blog-home.styl"
 @import "components/blog/blog-post.styl"
+//// Graduate
+@import "components/graduate.styl"
 
 
 
