page oneTeacher create and style

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -86,6 +86,8 @@
 @import "components/blog/blog-post.styl"
 //// Graduate
 @import "components/graduate.styl"
+//// OneTeacher
+@import "components/oneTeacher.styl"
 
 
 
