--- a/ecoleinfographie/resources/assets/stylus/base/_titles.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/_titles.styl
@@ -102,3 +102,17 @@
     height s(5, $sz5)
     background $cBorderTitles
     margin-top s(11, $sz5)
+
+.titleExtraBold33 // 26px
+  font-size: s($sz4);
+  font-weight 900
+  letter-spacing 1.63px
+  text-transform: uppercase
+  margin-bottom s(30, $sz5)
+  &:after
+    content ''
+    display: block
+    width s(45, $sz4)
+    height s(5, $sz4)
+    background $cBorderTitles
+    margin-top s(11, $sz4)
