create & style page inscription

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -88,7 +88,8 @@
 @import "components/graduate.styl"
 //// OneTeacher
 @import "components/oneTeacher.styl"
-
+//// Je veux m’inscrire
+@import "components/inscriptions.styl"
 
 
 // Trumps
