modify class body on blade file & css

--- a/ecoleinfographie/resources/assets/stylus/components/program.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/program.styl
@@ -1,4 +1,4 @@
-.les-metiers-du-web-programme-des-cours
+.programme-des-cours
   background-color $cBackgroundGrey
   .container
     background-color $cBackgroundGrey
