add php to viex postCourse

--- a/ecoleinfographie/resources/assets/stylus/components/course-post.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/course-post.styl
@@ -139,7 +139,7 @@
   z-index 10
   &__title
     @extend .titleOneLine
-  &__paragraph
+  & p
     font-size s($sz7)
     line-height: 1.62em
     margin-bottom s(20, $sz7)
