--- a/ecoleinfographie/resources/assets/stylus/components/course-post.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/course-post.styl
@@ -110,7 +110,10 @@
     left 0
     top 0
     bottom 0
-    background url('../img/course-img.jpg') no-repeat center center/cover
+    //background url('../img/course-img.jpg') no-repeat center center/cover
+    background-repeat no-repeat
+    background-position center center
+    background-size cover
 
 /*.course-card
   &__content:before
