implement view post-student

--- a/ecoleinfographie/resources/assets/stylus/components/former_students_interview.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/former_students_interview.styl
@@ -1,4 +1,4 @@
-.former-students-interview
+.student-post
   background-color $cBackgroundGrey2
   .container
   .container:before
@@ -98,7 +98,7 @@
       &:after
         bottom -3px;
 
-.former-students-interview
+.student-post
   .social-list-circle
     padding 0 s(20)
     text-align: center
