import chosen and style select

--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -1,6 +1,7 @@
 // Load generic
 @import "generic/reset_meyer.styl"
 @import "generic/reset_flexbox.styl"
+@import "generic/chosen.styl"
 
 // Load config & var
 @import "settings/global.styl"
