--- a/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
@@ -98,10 +98,12 @@
     position: relative
     overflow: hidden
   &__img
-    width 100%
-    height 355px
-    object-fit cover;
-    object-position: center;
+    height 100%
+    /*object-fit cover;
+    object-position: center;*/
+    background-size cover
+    background-position center center
+    background-repeat no-repeat
 
 // Create card
 .reas
@@ -208,94 +210,53 @@
     @extend .clearfix
   &__item
     display: inline-block
+    float: left
+    width s(397)
+    margin-right s(20)
+    margin-bottom s(20)
+    &:nth-child(3n + 3)
+      margin-right: 0
   &__item:nth-child(11n + 1)
-    position: relative
-    width col(6,12)
-    height s(355)
-    float left
-    margin-bottom s(100)
-    margin-top 100px
+    height s(531)
+    & .reas__img
+      height s(531)
   &__item:nth-child(11n + 2)
-    position: relative
-    width col(5,12)
-    height s(721)
-    float: right
-    margin-bottom s(100)
-    margin-top s(100)
-    & .reas__img
-      height s(721)
-  &__item:nth-child(11n + 3)
-    position: relative
-    width col(4,12) + (gutter(12) * 2)
-    margin-left col(1,12)
-    height s(435)
-    float left
-    margin-bottom s(100)
-    & .reas__img
-      height s(435)
-  &__item:nth-child(11n + 4)
-    position: relative
-    width col(5,12) + gutter(12)
-    margin-right col(1,12) + gutter(12)
-    height s(517)
-    float right
-    & .reas__img
-      height s(517)
-  &__item:nth-child(11n + 5)
-    position: relative
-    width col(4,12)
-    margin-left col(1,12) + gutter(12)
-    height s(427)
-    float left
-    margin-bottom s(100)
-    & .reas__img
-      height s(427)
-  &__item:nth-child(11n + 6)
-    position: relative
-    width col(8,12) + gutter(12)
-    height s(375)
-    float right
-    & .reas__img
-      height s(375)
-  &__item:nth-child(11n + 7)
-    position: relative
-    width col(3,12) + gutter(12)
     height s(495)
-    float left
-    margin-top s(100)
     & .reas__img
       height s(495)
+  &__item:nth-child(11n + 3)
+    height s(623)
+    & .reas__img
+      height s(623)
+  &__item:nth-child(11n + 4)
+    height s(427)
+    & .reas__img
+      height s(427)
+  &__item:nth-child(11n + 5)
+    height s(394)
+    & .reas__img
+      height s(394)
+  &__item:nth-child(11n + 6)
+    height s(495)
+    & .reas__img
+      height s(495)
+  &__item:nth-child(11n + 7)
+    height s(553)
+    & .reas__img
+      height s(553)
   &__item:nth-child(11n + 8)
-    position: relative
-    width col(5,12) + gutter(12)
-    height s(700)
-    float right
-    margin-top s(100)
-    margin-right col(1,12)
+    height s(481)
     & .reas__img
-      height s(700)
+      height s(481)
   &__item:nth-child(11n + 9)
-    position: relative
-    width col(5,12) + gutter(12)
-    height s(345)
-    float left
-    margin-top s(100)
+    height s(535)
     & .reas__img
-      height s(345)
+      height s(535)
   &__item:nth-child(11n + 10)
-    position: relative
-    width col(6,12) + (gutter(12)*2)
+    height s(329)
+    & .reas__img
+      height s(329)
+  &__item:nth-child(11n + 11)
     height s(345)
-    float left
-    margin-top s(100)
-    margin-left col(1,12)
     & .reas__img
       height s(345)
-  &__item:nth-child(11n + 11)
-    position: relative
-    width col(4,12)
-    height s(274)
-    float right
-    margin-top s(135)
-    & .reas__img
-      height s(274)
