add margin-bottom to index-rea__filter

--- a/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
@@ -83,6 +83,8 @@
         transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         transition-duration: 0.4s;
 
+.realisations .index-rea__filter
+  margin-bottom s(80)
 /************************************\
 		grid
 \************************************/
