--- a/ecoleinfographie/resources/assets/stylus/app.styl
+++ b/ecoleinfographie/resources/assets/stylus/app.styl
@@ -55,6 +55,7 @@
 @import "components/_redirect.styl"
 @import "components/_card-student.styl"
 @import "components/_social-list-circle.styl"
+@import "components/_load-more.styl"
 //// HOME
 @import "components/home/intro.styl"
 @import "components/home/location.styl"
