modify JS and class CSS

--- a/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
@@ -1,4 +1,4 @@
-.oneRea
+.work
   background-color $cBackgroundGrey
   .container
     background-color $cBackgroundGrey
@@ -208,7 +208,7 @@
     color $cBlueTitles
     margin-bottom s(50, $sz6);
 
-.oneRea
+.work
   .reas
     .reas__item
       width 31.048387097% // (385/1240) * 100
