modify some positions style

--- a/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
@@ -149,8 +149,8 @@
     @extend .clearfix
   &__desc
     background $cWhite
-    width col(8,12) + gutter(12)
-    padding s(60) s(70) s(60) 14%
+    width 61.74193548387096%
+    padding s(60) s(70) s(60) 8%
     & .rea-content__title
       color $cBlueTitles
   &__title
@@ -176,7 +176,7 @@
   &__desc
     float: right
   &__prof
-    position: absolute
+    position: relative
     top s(100)
     z-index 2
 .rea-content__button
