--- a/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/post-realisation.styl
@@ -107,6 +107,8 @@
       @extend .linkInText
       line-height: 1.45em
       font-weight 400
+      &:after
+        bottom 1px
   &__skill
     display: inline-block
     font-size s($sz7, $sz7)
@@ -114,6 +116,8 @@
     @extend .linkInText
     font-weight: 400
     margin-right: s(3, $sz7)
+    &:after
+      bottom 1px
     &:before
       content ','
       position: absolute
