add some styles index-realisations

--- a/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/realisations/index-realisations.styl
@@ -92,6 +92,23 @@
 .reas-wrapper
   &__title
     @extend .hidden
+  &__info
+    display: inline-block
+    margin s(40) 0
+    font-size s($sz8)
+    text-transform: uppercase
+    font-weight: 900
+    color $cBlueTitles
+    letter-spacing 1.2px
+  &__term
+    display: inline-block
+    padding s(8, $sz8) s(12, $sz8) s(9, $sz8)
+    font-weight: 700
+    color $cBlueCiel
+    font-size s($sz8)
+    letter-spacing 0
+    background $cWhite
+
 
 // Position img
 .reas
