correct error css breadcrumb

--- a/ecoleinfographie/resources/assets/stylus/components/_breadcrumb.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/_breadcrumb.styl
@@ -52,3 +52,7 @@
     letter-spacing 0.4px
   & .breadcrumb__link--active span
     color $cWhite
+
+.breadcrumb.breadcrumb--header
+  .breadcrumb__item:after
+    color $cWhite
