--- a/ecoleinfographie/resources/assets/stylus/components/blog/_blog-aside.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_blog-aside.styl
@@ -307,3 +307,68 @@
   height auto
   .blog-tags__item:nth-child(10)
     margin-bottom: 0
+
+
+/************************************\
+		AUTOCOMPLETE
+\************************************/
+
+.ui-autocomplete
+  max-height: 100px;
+  overflow-y: auto;
+  overflow-x: hidden;
+
+.ui-menu
+  max-width s(235)
+  padding 0
+  &::-webkit-scrollbar
+    width: 12px;
+  &::-webkit-scrollbar-thumb
+    background-color $cBlueCiel
+
+.ui-menu-item
+  font-size s($sz8)
+  padding s(10, $sz8) s(12, $sz8)
+  font-weight 700
+  transition .25s ease background-color
+  & *
+    color $cBlack
+    border none
+    border-radius 0
+    line-height: 1.3em
+  &:hover
+  &:focus
+    background-color $cGreyLight
+    transition .25s ease background-color
+
+.ui-widget.ui-widget-content
+  border 1px solid $cWhite2
+  border-top none
+
+.ui-menu .ui-menu-item-wrapper
+  padding 0
+.ui-menu-icons .ui-menu-item-wrapper
+  padding-left: 0
+.ui-menu .ui-menu-item
+  list-style-image none
+
+.ui-state-active,
+.ui-widget-content .ui-state-active,
+.ui-widget-header .ui-state-active,
+a.ui-button:active,
+.ui-button:active,
+.ui-button.ui-state-active:hover {
+  border none
+  background: none;
+  font-weight: 700;
+  background-color none
+  color: $cBlack
+}
+
+.ui-menu .ui-state-focus,
+.ui-menu .ui-state-active
+  margin: 0
+
+
+
+
