--- a/ecoleinfographie/resources/assets/stylus/components/blog/blog-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/blog-home.styl
@@ -15,6 +15,12 @@
     @extend .titleExtraBold26
     color $cBlueTitles
     padding s(50, $sz5) 0 s(30, $sz5)
+    & strong
+      font-size inherit
+      display: inline-block
+      padding 10px 15px
+      color $cBlueCiel
+      background-color $cWhite
   & .blog-card
     margin-bottom s(85)
   &__result
