--- a/ecoleinfographie/resources/assets/stylus/components/blog/blog-home.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/blog-home.styl
@@ -9,7 +9,7 @@
   justify-content space-between
   &__container
     float: left
-    max-width 64.596774194% // 801/1240*100
+    width 64.596774194% // 801/1240*100
 
   &__title
     @extend .titleExtraBold26
