add styles for condition author

--- a/ecoleinfographie/resources/assets/stylus/components/blog/_blogArticle.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_blogArticle.styl
@@ -87,6 +87,11 @@ $paddLArticle = 52
       background-color $cBlueCiel
       transition .2s $ease-out-quart width
 
+.blogArticle__author__name--noprofil
+  color $cText-greyblue
+.blogArticle__author__name--noprofil:after
+  display: none
+
 .blogArticle__author:hover .blogArticle__author__name:after
 .blogArticle__author:focus .blogArticle__author__name:after
   width 100%
