--- a/ecoleinfographie/resources/assets/syntaxhighlighter/theme.css
+++ b/ecoleinfographie/resources/assets/syntaxhighlighter/theme.css
@@ -179,14 +179,6 @@
     padding: 0 13px 0 13px !important;
 }
 
-.syntaxhighlighter table td.gutter .line:first-child{
-    padding: 15px 13px 0 13px !important;
-}
-
-.syntaxhighlighter table td.gutter .line:last-child{
-    padding: 0 13px 15px 13px !important;
-}
-
 .syntaxhighlighter table td.code .line {
     padding: 0 1em !important;
 }
@@ -357,7 +349,7 @@
 }
 
 .syntaxhighlighter .line.highlighted.alt1, .syntaxhighlighter .line.highlighted.alt2 {
-    background-color: #e0e0e0 !important;
+    background-color: #EBEBEB !important;
 }
 
 .syntaxhighlighter .line.highlighted.number {
@@ -375,6 +367,8 @@
 
 .syntaxhighlighter .gutter {
     color: #afafaf !important;
+    padding: 13px 0 13px 0 !important;
+    background: #136A84 !important;
 }
 
 .syntaxhighlighter .gutter .line.highlighted {
