add success message and style

--- a/ecoleinfographie/resources/assets/stylus/components/blog/_comments.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_comments.styl
@@ -199,6 +199,7 @@
   &__submit
     margin-top s(20, $sz8)
     @extend .buttonLeftToRight
+    position: relative
     font-size s($sz8)
     font-weight: 900
     letter-spacing 1.3px
@@ -222,4 +223,12 @@
   margin-top s(6)
   color $cError
   line-height 1.3em
+
+.form-success
+  margin-top s(20, $sz7)
+  font-size s($sz7)
+  color $cSuccess
+  line-height: 1.3em
+  letter-spacing .4px
+  font-weight: 700
 
