--- a/ecoleinfographie/resources/assets/stylus/components/blog/_comments.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_comments.styl
@@ -194,6 +194,18 @@
       transition .25s ease border
   &__wrapperTextarea
     position: relative
+    &:before
+      content ''
+      position: absolute
+      display: block
+      top 1px
+      width 100% - 1px
+      height 40px
+      background-color $cWhite
+      margin-left: auto
+      margin-right: auto
+      left 0
+      right: 0
   &__label--textarea
     top 5%
   &__submit
