--- a/ecoleinfographie/resources/assets/stylus/base/base.styl
+++ b/ecoleinfographie/resources/assets/stylus/base/base.styl
@@ -54,6 +54,7 @@ button {
   -webkit-user-select: none; /* for button */
   -moz-user-select: none;
   -ms-user-select: none;
+  outline none
 }
 input::-moz-focus-inner,
 button::-moz-focus-inner {
