--- a/ecoleinfographie/resources/assets/stylus/components/blog/_blogArticle.styl
+++ b/ecoleinfographie/resources/assets/stylus/components/blog/_blogArticle.styl
@@ -226,3 +226,33 @@ $paddLArticle = 52
       border-radius 50%
       margin-right 14px
       background $cBlack
+
+/************************************\
+		TAGS
+\************************************/
+
+.blogArticle__body
+  .tags
+    display: inline-block
+    padding-left 6px
+    &__wrapper
+      margin s(35) 0 s(80) 0
+      padding-left s(52)
+    &__item
+      position: relative
+      display: inline-block
+      margin-right s(5)
+      &::before
+        display: none
+      &:after
+        content ','
+        position: absolute
+        right: s(-4)
+        bottom: 0
+      &:last-child:after
+        content ''
+    &__link
+      display: inline-block
+      font-size s($sz10)
+    &__label
+      font-weight: 700
